--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,11 +1,24 @@
-title: Sound board
+title: design-project-template
 hero_image: images/banner.png
-description: sound-board description
+description: design-project-template description
 version: 4
 listed: false
 copyedit: false
-last_tested: "2022-01-10"
+last_tested: "2021-03-26"
 steps:
   - title: Introduction
   - title: Step title
+  - title: Step title
+    completion: engaged
+  - title: Step title
+    completion: internal
+  - title: Reflection
+    knowledge_quiz:
+      path: quiz1
+      version: 1
+      questions: 3
+      passing_score: 3
+    completion: external
+  - title: Upgrade your project
+  - title: Share
   - title: What next?
