Co-authored-by: beckyfranks <beckyfranks@users.noreply.github.com>

--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,4 +1,4 @@
-title: design-project-template
+title: Sound machine
 hero_image: images/banner.png
 description: design-project-template description
 version: 4
