--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,6 +1,6 @@
 title: Sound machine
 hero_image: images/banner.png
-description: Create a sound machine that will play sound effects or music using buttons, switches or a potentiometer
+description: Create a sound machine that will play sound effects or music using buttons, switches, or a potentiometer
 version: 4
 listed: false
 copyedit: false
